buffer with the article(s) attached.

---
*** New option 'nnir-notmuch-filter-group-names-function'.
This option controls whether and how to use Gnus search groups as
'path:' search terms to 'notmuch'.

** erc

---
*** 'erc-button-google-url' has been renamed 'erc-button-search-url'
and its value has been changed to Duck Duck Go.

** EUDC

*** XEmacs support has been removed.

** eww/shr

+++
*** The 'eww' command can now create a new EWW buffer.
Invoking the command with a prefix argument will cause it to create a
new EWW buffer for the URL instead of reusing the default one.

+++
*** The 'd' ('eww-download') command now falls back to current page's URL.
If this command is invoked with no URL at point, it now downloads the
current page instead of signaling an error.

*** When opening external links in eww/shr (typically with the
'C-u RET' keystroke on a link), the link will be flashed with the new
'shr-selected-link' face to give the user feedback that the command
has been executed.

+++
*** New option 'shr-discard-aria-hidden'.
If set, shr will not render tags with attribute 'aria-hidden="true"'.
This attribute is meant to tell screen readers to ignore a tag.

---
*** 'shr-tag-ol' now respects the ordered list 'start' attribute.

** Htmlfontify

*** The functions 'hfy-color', 'hfy-color-vals' and
'hfy-fallback-color-values' and the variables 'hfy-fallback-color-map'
and 'hfy-rgb-txt-color-map' have been renamed from names that used
'colour' instead of 'color'.

+++
** Enriched mode supports the 'charset' text property.
You can add or modify the 'charset' text properties of text using the
'Edit->Text Properties->Special Properties' menu, or by invoking the
'facemenu-set-charset' command.  Documents in Enriched mode will be
saved with the charset properties, and those properties will be
restored when the file is visited.

** Smtpmail

Authentication mechanisms can be added via external packages, by
defining new 'cl-defmethod' of 'smtpmail-try-auth-method'.
